# json-formatter

./: .env.example  .env.local.example  .gitignore  .mcp.json  .prettierignore  .prettierrc.json  .vercelignore  LANGUAGE_TESTING.md  LICENSE  README.md  biome.json  config.py  debug-language.js  deploy-server.sh  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  instrumentation-client.ts  instrumentation.ts  lefthook.yml  main.py  next-i18next.config.js  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run.py  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  test-language.html  test-languages.sh  tsconfig.json  update-translations.js  vercel.json
compose/prod/: Caddyfile  Dockerfile
public/: manifest.json  robots.txt  sitemap.xml  suppress-monaco-warnings.js
react-app/: next.config.js  package-lock.json  pnpm-lock.yaml
scripts/: copy-monaco.mjs
src/: app.ts
src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
src/components/: Analytics.tsx  ChartView.tsx  ClientNavbar.tsx  CodeMirrorEditor.tsx  CompareWorkspace.module.css  CompareWorkspace.tsx  ControlButtons.tsx  DiffView.module.css  DiffView.tsx  EditorErrorBoundary.tsx  EditorView.tsx  EditorWorkspace.tsx  ErrorBoundary.tsx  GoogleAnalytics.tsx  GraphView.module.css  GraphView.tsx  GraphViewHelpers.ts  HelpTabs.tsx  Hotjar.tsx  I18nProvider-BrowserFirst.tsx  I18nProvider.tsx  JsonExampleModal.tsx  JsonWorkbench.tsx  (+11 more)
static/: robots.txt  sitemap.xml
templates/: 404.html  index.html
(+117 files in other folders)
