[project]
name = "json-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.10.1",
]

[tool.ruff]
line-length = 100
exclude = ["alembic/versions/*"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["json-viewer"]
combine-as-imports = true
lines-after-imports = 2

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
